# A3C_ROS

./: .gitmodules  Dockerfile  README.md  cleanros.sh  symbolicFk.py
dev-tools/: common.txt  python3-deps.txt  ros-packages.txt  rviz-gazebo.txt
scripts/: setup-ros-dev-environment.bash
src/a3c_description/: package.xml
src/a3c_description/config/: arm_controller.yaml  arms_trajectory_controller.yaml
src/a3c_description/launch/: arms_trajectory_controller.launch  ros_control.launch  ros_control_traj.launch
src/a3c_description/urdf/: base.urdf
src/a3c_description/xacro/: base_mounting.xacro  robot_transmission.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_finger_tips.xacro  robotiq_arg2f_transmission.xacro  ros_control.xacro  ros_control_traj.xacro
src/a3c_kinematics/: CMakeLists.txt  package.xml  readme.md
src/a3c_kinematics/include/a3c_kinematics/: ForwardKinematics.hpp  Kinematics.hpp
src/a3c_kinematics/profiling/: FKprofiler.cpp
src/a3c_kinematics/src/: ForwardKinematics.cpp  Kinematics.cpp  main.cpp
src/a3c_kinematics/src/a3c_kinematics/: Kinematics.cpp
src/a3c_moveit/: CMakeLists.txt  Readme.md  package.xml
src/a3c_moveit/a3c_ik_validation/: CMakeLists.txt
src/a3c_moveit/a3c_ik_validation/scripts/: rvizIKValidation.py
src/a3c_moveit/pick_and_place/: CMakeLists.txt
src/a3c_moveit/pick_and_place/box_model/unit_box_clone/: model.sdf
src/a3c_moveit/pick_and_place/launch/: pick_and_place.launch  pick_and_place_gaz_node.launch  pick_and_place_gazebo.launch  pick_and_place_rviz_node.launch
src/a3c_moveit/pick_and_place/src/: pick_and_place.cpp  pick_and_place_gaz.cpp  pick_and_place_rviz.cpp  temp.cpp
src/a3c_moveit/pick_and_place/urdf/: box.urdf
src/a3c_moveit/tutorials/kinematics_model/: CMakeLists.txt
src/a3c_moveit/tutorials/kinematics_model/launch/: kinematics_model.launch
src/a3c_moveit/tutorials/kinematics_model/src/: kinematics_model_tutorial.cpp
src/a3c_moveit/tutorials/move_group_interface/: CMakeLists.txt
src/a3c_moveit/tutorials/move_group_interface/launch/: move_group_interface_tutorial_node.launch
src/a3c_moveit/tutorials/move_group_interface/src/: move_group_interface_tutorial.cpp
src/a3c_moveit_config/: .setup_assistant  CMakeLists.txt  Readme.md  package.xml
src/a3c_moveit_config/config/: A3C.srdf  A3C_vac.srdf  cartesian_limits.yaml  fake_controllers.yaml  gazebo_A3C.urdf  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ros_controllers_vac.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/a3c_moveit_config/launch/: a3c_moveit_planning.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_gazebo_vac.launch  demo_vac.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gazebo_vac.launch  move_group.launch  move_group_vac.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context_vac.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  ros_controllers_vac.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
src/kinematics_validation/: Readme.md  ikValidation.py  symbolicFk.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch  gazebo.launch
src/robot_description/meshes/: l0.stl  l1.stl  l2.stl  l3.stl  l4.stl  l5.stl  l6.stl
src/robot_description/rviz/: basic_display.rviz
src/robot_description/urdf/: base.urdf  test.urdf
src/robot_description/xacro/: base_mounting.xacro
src/workspace visualization/: Readme.md  workspaceViz.py
